<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    tools:context=".SettingActivity">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <!--<android.support.v7.widget.AppCompatImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="0dp"-->
            <!--android:src="@drawable/splash"-->
            <!--/>-->

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Update Account Details"
            android:textSize="20dp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/text_update" />

        <!--<android.support.v7.widget.AppCompatTextView-->
            <!--android:id="@+id/appCompatTextViewLoginLink"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:gravity="center"-->
            <!--android:text="Already a member? Login"-->
            <!--android:textSize="16dp" />-->
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_margin="20dp"-->
    <!--tools:context=".RegisterActivity">-->

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="24dp"-->
    <!--android:layout_margin="40dp"-->
    <!--android:text="Create a new account"-->
    <!--android:textStyle="italic"-->

    <!--/>-->

    <!--<EditText-->
    <!--android:id="@+id/etname"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="10dp"-->
    <!--android:ems="10"-->
    <!--android:inputType="textPersonName"-->
    <!--android:hint="Name"-->
    <!--tools:layout_editor_absoluteX="23dp"-->
    <!--tools:layout_editor_absoluteY="85dp" />-->

    <!--<EditText-->
    <!--android:id="@+id/etphone"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:ems="10"-->
    <!--android:hint="Mobile No."-->
    <!--android:inputType="phone"-->
    <!--android:layout_margin="10dp"-->
    <!--tools:layout_editor_absoluteX="21dp"-->
    <!--tools:layout_editor_absoluteY="185dp" />-->

    <!--<EditText-->
    <!--android:id="@+id/etpass"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:ems="10"-->
    <!--android:hint="Password"-->
    <!--android:inputType="textPassword"-->
    <!--android:layout_margin="10dp"-->
    <!--tools:layout_editor_absoluteX="20dp"-->
    <!--tools:layout_editor_absoluteY="284dp" />-->

    <!--<Button-->
    <!--android:id="@+id/button"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="REGISTER"-->
    <!--android:layout_margin="10dp"-->
    <!--android:layout_marginTop="20dp"-->
    <!--tools:layout_editor_absoluteX="22dp"-->
    <!--tools:layout_editor_absoluteY="429dp" />-->
    <!--</LinearLayout>-->